[tool.poetry]
name = "feret"
version = "0.1.2"
description = "Calculate Feret diameter."
authors = ["matthiasnwt <62239991+matthiasnwt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/matthiasnwt/feret"
homepage = "https://github.com/matthiasnwt/feret"

keywords = ["feret", "maxferet", "diameter", "maximum"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
