[tool.poetry]
name = "feret"
version = "1.0.3"
description = "Calculate Feret diameter."
authors = ["matthiasnwt <62239991+matthiasnwt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"


repository = "https://github.com/matthiasnwt/feret"
homepage = "https://github.com/matthiasnwt/feret"

keywords = ["feret", "maxferet", "diameter", "maximum", "caliper"]

classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: Unix",
	"Operating System :: MacOS",
	"Programming Language :: Python",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Physics",
	"Topic :: Scientific/Engineering :: Image Processing",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Topic :: Scientific/Engineering :: Visualization",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
opencv-python = "^4.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
